--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -6,9 +5,16 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
         android:src="@drawable/logo" />
 
+    <View
+        android:id="@+id/lingkarang_splashscreen"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/lingkarang_splash"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"/>
 </RelativeLayout>
