--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_color">#0A1124</color>
+    <color name="secondary_color">#001136</color>
+    <color name="third_color">#3F5FCE</color>
 </resources>
