--- a/app/src/main/res/layout/fragment_competition_team.xml
+++ b/app/src/main/res/layout/fragment_competition_team.xml
@@ -6,42 +6,60 @@
     android:layout_height="match_parent"
     android:background="#001136"
     tools:context=".Home.HomeFragment">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/header_container"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toTopOf="parent">
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/icon_left"
-            android:layout_width="70dp"
-            android:layout_height="60dp"
-            android:src="@drawable/profile_coba"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:padding="8dp"/>
-        <TextView
-            android:id="@+id/title_center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="YouniFirst"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            android:fontFamily="@font/is_bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-        <ImageView
-            android:id="@+id/icon_right"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/icon_notifikasi"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:padding="8dp"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal">
+        <LinearLayout
+            android:layout_width="357dp"
+            android:layout_height="643dp"
+            android:background="@drawable/asset_background_list_item"
+            android:layout_marginTop="17dp"
+            android:orientation="horizontal">
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/icon_left"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/profile_coba"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:padding="8dp">
+            </com.google.android.material.imageview.ShapeableImageView>
+            <LinearLayout
+                android:layout_width="280dp"
+                android:layout_height="50dp"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="qiuqiu"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="16dp">
+                </TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="qiuqiu"
+                    android:textColor="#898D96"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="12dp">
+                </TextView>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:src="@drawable/icon_lainnya"
+                    android:layout_marginTop="17dp"/>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+        
 
 </androidx.constraintlayout.widget.ConstraintLayout>
