--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="primary_color">#0A1124</color>
     <color name="secondary_color">#001136</color>
     <color name="third_color">#3F5FCE</color>
+    <color name="btn_fabmenu">#3B5CCC</color>
 </resources>
