--- a/app/src/main/res/layout/opening_app_three.xml
+++ b/app/src/main/res/layout/opening_app_three.xml
@@ -83,6 +83,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="-60dp">
         <Button
+            android:id="@+id/btn_lewati_second"
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:gravity="center"
