--- a/app/src/main/res/layout/page_login.xml
+++ b/app/src/main/res/layout/page_login.xml
@@ -76,6 +76,7 @@
         </EditText>
 
         <TextView
+            android:id="@+id/lupa_sandi"
             android:layout_width="390dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
@@ -92,6 +93,7 @@
         android:gravity="center_horizontal"
         android:layout_marginTop="50dp">
         <Button
+            android:id="@+id/btn_mulai"
             android:layout_width="350dp"
             android:layout_height="60dp"
             android:background="@drawable/custom_button_rounded"
